--- a/Fixcord.App/Fixcord.App.csproj
+++ b/Fixcord.App/Fixcord.App.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>netcoreapp5</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64;x86</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
