--- a/Fixcord.App/Fixcord.App.csproj
+++ b/Fixcord.App/Fixcord.App.csproj
@@ -1,8 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp5</TargetFramework>
+    <TargetFramework>net5</TargetFramework>
     <UseWPF>true</UseWPF>
     <Nullable>enable</Nullable>
     <Platforms>AnyCPU;x64;x86</Platforms>
